<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerFilter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/sort_by" />

                <Spinner
                    android:id="@+id/spinnerSortBy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default">

                <Spinner
                    android:id="@+id/spinnerRoleAvailable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvLocation">

                        <RadioButton
                            android:id="@+id/rbtEveryWhere"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/every_where" />

                        <RadioButton
                            android:id="@+id/rbtNearMe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/near_me" />

                        <RadioButton
                            android:id="@+id/rbtNear"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:text="@string/near" />

                        <EditText
                            android:id="@+id/edtNear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorDefault"
                    android:text="Logout" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
