<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerFilter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/sort_by" />

                <Spinner
                    android:id="@+id/spinnerSortBy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default">

                <Spinner
                    android:id="@+id/spinnerRoleAvailable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <!--<RadioGroup-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content">-->

                        <RadioButton
                            android:id="@+id/rbtEveryWhere"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/every_where" />

                        <RadioButton
                            android:id="@+id/rbtNearMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/near_me" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rbtNear"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:text="@string/near" />

                            <EditText
                                android:layout_marginRight="5dp"
                                android:enabled="false"
                                android:layout_marginLeft="5dp"
                                android:background="@drawable/border_search"
                                android:id="@+id/edtNear"
                                android:layout_width="match_parent"
                                android:layout_height="fill_parent"
                                android:layout_weight="1" />
                        </LinearLayout>
                    <!--</RadioGroup>-->
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listProject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->

</FrameLayout>
